[package]
name = "nanocluster_control"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.0", features = ["derive"] }
confy = "1.0.0"
env_logger = "0.11.8"
log = "0.4.28"
openssh = "0.11.5"
serde = "1.0.228"
serde_derive = "1.0.228"
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread", "macros"] }
