[package]
name = "nanocluster_control"
version = "0.1.0"
edition = "2024"
authors = ["Ammar Kazem kazem.ammar49@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A tool to control power and fan of Sipeed NanoCluster"
homepage = "https://github.com/Ammar96399/nanocluster_control"
repository = "https://github.com/Ammar96399/nanocluster_control"
keywords = ["cli", "nanocluster", "sipeed"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.0", features = ["derive"] }
confy = "1.0.0"
env_logger = "0.11.8"
log = "0.4.28"
openssh = "0.11.5"
serde = "1.0.228"
serde_derive = "1.0.228"
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread", "macros"] }
